# FRusst

./: Cargo.toml  README.md
.github/workflows/: rust.yml
feed-lib/: Cargo.toml  README.md
feed-lib/src/: feed.rs  feed_item.rs  feed_manager.rs  feed_reader.rs  feed_storage.rs  lib.rs
src/: main.rs
