[package]
name = "feed-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
urlencoding = "2.1.3"
chrono = "0.4.41"
sha2 = "0.10.9"
once_cell = "1.21.3"
tokio-util = "0.7.16"
reqwest = "0.12.23"
feed-rs = "2.3.1"
rss = "2.0.12"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
log = "0.4"
env_logger = "0.11"

[dependencies.mongodb]
version = "3.2.4"
